<resources>
    <string name="app_name">UltraTask</string>
    <string name="tk_manager">Tasks Manager</string>
    <string name="tk_viewer">Tasks Viewer</string>
    <string name="task_manager_String">Task Manager</string>
    <string name="name_String">Name</string>
    <string name="description_String">Description</string>
    <string name="date_String">Date</string>
    <string name="cr_task_String">Create</string>
    <string name="dl_task_String">Delete</string>
    <string name="mod_task_String">Modify</string>
    <string name="search_task_String">Search</string>
    <string name="task_viewer_String">Task Viewer</string>
    <string name="tv_name">Name</string>
    <string name="tv_description">Description</string>
    <string name="tv_date">Date</string>
    <string name="tv_priority">Priority</string>
</resources>
